@@ -7,6 +7,8 @@ gendaymtx - generate an annual Perez sky matrix from a weather tape
 [
 .B "\-v"
 ][
+.B "\-h"
+][
 .B "\-d|\-s"
 ][
 .B "\-r deg"
@@ -101,6 +103,9 @@ The
 .I \-O1
 option specifies that output should be total solar radiance rather
 than visible radiance.
+The
+.I \-h
+option prevents the output of the usual header information.
 Finally, the
 .I \-v
 option will enable verbose reporting, which is mostly useful for
