@@ -120,3 +120,6 @@ gensky.o:	../common/color.h
 gensurf.o genworm.o genrev.o:	../common/calcomp.h
 
 sun.o:	sun.h
+
+gendaymtx.o:	../common/platform.h ../common/rtmath.h \
+../common/mat4.h ../common/fvect.h ../common/color.h
